assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Special+Elite&display=swap');

/*-----------------------------  basic container structure for games most basic appearance*/
body {
    background-color: #747474;
    color: #010203;
    font-family: "Special Elite", sans-serif;
    text-align: center;
    letter-spacing: 1px;
}

#playing-board {
    background-image: url("../images/background.jpg");
    background-repeat: no-repeat;
    background-size: cover;
    padding-bottom: 5rem;
    min-height: 100vh;
}

/*----------------------------- outer most container of individual cards  */
/*----------------------------- Ideas for structure (HTML) and implementation (CSS) of rotating card taken from three different sources all are detailed in README.md  */
/*----------------------------- Arjun Khara(https://www.youtube.com/watch?v=OV8MVmtgmoY), MDN web docs(https://developer.mozilla.org/en-US/docs/Web/CSS/backface-visibility), W3Schools(https://www.w3schools.com/howto/howto_css_flip_box.asp)*/
.card-frame {
    margin-top: 1rem;
    font-size: 1.5rem;
    height: 7rem;
    transform: scale(.90);
}

@media (max-width: 991.98px) {
    #game {
        top: 6.5rem;
    } 
}


@media (max-width: 767.98px) { 
    #game {
        position: relative;
        margin-top: .5rem;
        top: 6.5rem;
    }
}

@media (max-width: 575.98px) {
    #game {
        position: relative;
        margin-top: .5rem;
        top: 14rem;
    }
}

/*----------------------------- container that rotates card faces (front and back) */
/*----------------------------- Ideas for structure (HTML) and implementation (CSS) of rotating card taken from three different sources all are detailed in README.md  */
/*----------------------------- Arjun Khara(https://www.youtube.com/watch?v=OV8MVmtgmoY), MDN web docs(https://developer.mozilla.org/en-US/docs/Web/CSS/backface-visibility), W3Schools(https://www.w3schools.com/howto/howto_css_flip_box.asp)*/
.cardRotate {
    height: 100%;
    width: 100%;
    transition-duration: 2s;
    transform-style: preserve-3d;
    position: relative;
}

/*-----------------------------  card faces (front and back) structure*/
/*----------------------------- Ideas for structure (HTML) and implementation (CSS) of rotating card taken from three different sources all are detailed in README.md  */
/*----------------------------- Arjun Khara(https://www.youtube.com/watch?v=OV8MVmtgmoY), MDN web docs(https://developer.mozilla.org/en-US/docs/Web/CSS/backface-visibility), W3Schools(https://www.w3schools.com/howto/howto_css_flip_box.asp)*/
.card {
    -webkit-backface-visibility: hidden;
    backface-visibility: hidden;
    height:100%;
    width:100%;
    position: absolute;
    box-shadow: .25rem .25rem .25rem .25rem rgba(0, 0, 0, .5);
}

.cardBack {
    font-family: "Architects Daughter", sans-serif;
    letter-spacing: 2px;
    /*font-size: 2.5rem;*/
    font-weight: 700;
    text-shadow: .1rem .1rem .09rem #010203;
    transform: rotateX(180deg);
}

.cardBack p {
    position: relative;
    top: 1.5rem;
}

/*-----------------------------  card faces (front and back) backgrounds*/
.cardFaceTypeIndex {
    background-image: linear-gradient(#fff 10%, #F015A7 10% 12%, #fff 12% 22%, #3172BB 22% 24%, #fff 24% 34%, #3172BB 34% 36%, #fff 36% 46%, #3172BB 46% 48%, #fff 48% 58%, #3172BB 58% 60%, #fff 60% 70%, #3172BB 70% 72%, #fff 72% 82%, #3172BB 82% 84%, #fff 84% 94%, #3172BB 94% 96%, #fff 96% 100%);
}

.cardBackTypeIndex {
    background-image: linear-gradient(#fff 4%, #3172BB 4% 6%, #fff 6% 16%, #3172BB 16% 18%, #fff 18% 28%, #3172BB 28% 30%, #fff 30% 40%, #3172BB 40% 42%, #fff 42% 52%, #3172BB 52% 54%, #fff 54% 64%, #3172BB 64% 66%, #fff 66% 76%, #3172BB 76% 78%, #fff 78% 88%, #F015A7 88% 90%, #fff 90% 100%);
    color: #FF00EA;
}

.cardFaceTypeFun,
.cardBackTypeFun {
    border: groove 4px #fff;
    border-radius: 5%;
}

.cardFaceTypeFun {
    background-image: url("../images/card-back-BW.jpg");
    background-repeat: no-repeat;
    background-size: 100% 100%;
}

.cardBackTypeFun  {
    background-image: linear-gradient(to top left, #010203, #494949, #787878, #525252, #fff, #373737, #494949, #787878,  #494949, #373737, #fff, #525252, #787878, #494949, #010203);
    color: #FF00EA;
}


/*-----------------------------  "flips" cards over and removes them from game board*/
.flipCard {
    transform: rotateX(180deg) scale(1.1);
    box-shadow: .5rem .5rem .5rem .5rem rgba(0, 0, 0, .5);
}

.cardRemove {
    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.0);
}

.cardRemove div {
    transition-duration: 5s;
    opacity: 0;
}

/*-----------------------------  adjusts font size of cards for screen responsiveness*/
.card-frame p {
    font-size: 2rem;
    
    /*font-size: 1.5rem;*/
}

@media (max-width: 991.98px) { 
    #start-screen/*,
    .card-frame */{
        font-size: .75rem;
    } 
    .card-frame p {
        font-size: 3vw;
    }
}

@media (max-width: 767.98px) { 
    .card-frame p {
        font-size: 4vw;
    }
}

@media (max-width: 575.98px) {
    #start-screen/*,
    .card-frame*/ {
        font-size: .5rem;
    }
    .card-frame p{
        font-size: 5vw;
    }
}

/*-----------------------------  game header, which houses: game title, win/lose header, timer, and player points earned*/
#timer-frame {
    text-shadow: .1rem .1rem .09rem #010203;
    height: 5rem;
    margin: 2rem 0rem;
    font-size: 2rem;
    font-weight: 500;
    color: rgb(0, 255, 21);
}

#timer-frame h1 {
    font-size: 3.5rem;
    font-weight: 400;
    padding: .5rem 1rem;
}

/*-----------------------------  hides game header elements*/
.hiddenEl {
    display: none;
}

/*-----------------------------  start screen of game with all user input selectable options*/
#start-screen {
    position: absolute;
    width: 100%;
    background-color: rgba(0, 0, 0, .5);
    color: rgb(0, 255, 21);
    z-index: 1;
    font-size: 1.5rem;
    padding: 1rem 1.5rem;
}

#start-screen select {
    border: outset 2px rgba(61, 177, 67, 0.534);
    padding-left: 1rem;
}

#start-screen option {
    background-color: rgba(0, 0, 0, .9)
}

#start-screen p,
#start-screen select,
.start-button {
    margin-top: 1.5rem;
    margin-bottom: 1.5rem;
    color: rgb(0, 255, 21);
    text-shadow: .1rem .1rem .09rem rgb(0, 56, 19);
}

@media (max-width: 575.98px) { 
    #start-screen {
        top: 12rem;
    }
}

/*-----------------------------  allows start screen to have column alignment for name of select/option and its values*/
.start-screen-description,
.start-screen-choice {
    display: inline-block;
    width: 40%;
}

.start-screen-description {
    text-align: left;
} 

.start-screen-choice {
    text-align: right;
    background-color: rgba(0, 0, 0, .25);
    padding-top: .5rem;
    padding-bottom: .5rem;
}

@media (max-width: 575.98px) { 
    .start-screen-description,
    .start-screen-choice {
        width: 100%;
        text-align: center;
    }
}

/*-----------------------------  start button on start screen*/
.start-button {
    z-index: 1;
    width: 20%;
    padding: 1rem 0;
    background-color: rgba(0, 0, 0, .5);
    transition-duration: 1s;
    font-size: 1.75rem;
}

.start-button:hover {
    background-color: rgba(0, 0, 0, .95);
    color: #fff;
}

@media (max-width: 991.98px) {
    .start-button {
        width:50%;
    }
}

